--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1752,3 +1752,26 @@ section,
   transform: skew(-10deg);
   transition: transform 0.3s ease-in-out;
 }
+
+/* bouncing animation  */
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
+.img-bounce {
+  animation: bounce 2s infinite;
+}
+
+img.blue-tone {
+  filter: hue-rotate(200deg) saturate(200%); 
+}
+
+
