--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1774,4 +1774,21 @@ img.blue-tone {
   filter: hue-rotate(200deg) saturate(200%); 
 }
 
+.feature-image{
+  overflow: hidden;
+  border-radius: 15px;
+}
+
+.feature-image img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  border-radius: 15px;
+  transition: transform 0.3s ease;
+}
+
+.feature-image img:hover {
+  transform: scale(1.05);
+}
+
 
