--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 *{
-  font-family: Arial;
+  font-family: sans-serif;
   
 }
 
@@ -9,20 +9,20 @@
 :root { 
   --background-color: #ffffff;
   --default-color: #444444; 
-  --heading-color: green; /* Color for headings, subheadings and title throughout the website */
-  --accent-color: #1acc8d; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
-  --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
-  --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
+  --heading-color: green; 
+  --accent-color: #1acc8d; 
+  --surface-color: #ffffff; 
+  --contrast-color: #ffffff; 
 }
 
-/* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
+
 :root {
-  --nav-color: #ffffff;  /* The default color of the main navmenu links */
-  --nav-hover-color: #1acc8d; /* Applied to main navmenu links when they are hovered over or active */
-  --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
-  --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
-  --nav-dropdown-color: #444444; /* Used for navigation links of the dropdown items in the navigation menu. */
-  --nav-dropdown-hover-color: #1acc8d; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
+  --nav-color: #ffffff;  
+  --nav-hover-color: #1acc8d; 
+  --nav-mobile-background-color: #ffffff; 
+  --nav-dropdown-background-color: #ffffff; 
+  --nav-dropdown-color: #444444; 
+  --nav-dropdown-hover-color: #1acc8d; /
 }
 
 /* Color Presets - These classes override global colors when applied to any section or element, providing reuse of the sam color scheme. */
@@ -51,6 +51,7 @@
 body {
   color: var(--default-color);
   background-color: var(--background-color);
+  font-family: sans-serif;
 }
 
 a {
@@ -71,7 +72,7 @@ h4,
 h5,
 h6 {
   color: var(--heading-color);
-  /* font-family:  sans-serif; */
+  
 }
 
 /* PHP Email Form Messages
@@ -202,7 +203,7 @@ h6 {
     color: color-mix(in srgb, var(--nav-color), transparent 20%);
     font-size: 15px;
     padding: 0 2px;
-    font-family: var(--nav-font);
+    
     font-weight: 400;
     display: flex;
     align-items: center;
@@ -338,7 +339,7 @@ h6 {
   .navmenu a:focus {
     color: var(--nav-dropdown-color);
     padding: 10px 20px;
-    font-family: var(--nav-font);
+
     font-size: 17px;
     font-weight: 500;
     display: flex;
@@ -464,13 +465,13 @@ h6 {
   font-size: 26px;
   font-weight: 700;
   letter-spacing: 1px;
-  font-family: var(--heading-font);
+
   color: var(--heading-color);
 }
 
 .footer .footer-about p {
   font-size: 14px;
-  font-family: var(--heading-font);
+
 }
 
 .footer .social-links a {
